--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,7 @@
 @import "block/hero";
 @import "block/serc";
 @import "block/cards";
+@import "block/truck";
+@import "block/work";
+@import "block/tabel";
+@import "block/step";
