--- a/sass/block/_cards.scss
+++ b/sass/block/_cards.scss
@@ -10,17 +10,73 @@
     align-items: center;
     // border: 1px solid red;
     gap: 20px;
-    .cards__text{
+    .cards__text {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      b {
+        font-size: 20px;
+        font-weight: 600;
+      }
+      p {
+        color: gray;
+      }
+    }
+  }
+}
+@media (max-width: 960px) {
+  .card__wrap {
+    display: flex;
+    margin-top: 100px;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    .cards__card {
+      padding: 40px 80px;
+      max-width: 100%;
+      display: flex;
+      align-items: center;
+      // border: 1px solid red;
+      gap: 20px;
+      .cards__text {
         display: flex;
         flex-direction: column;
         gap: 25px;
-        b{
-            font-size: 20px;
-            font-weight: 600;
+        b {
+          font-size: 20px;
+          font-weight: 600;
         }
-        p{
-            color: gray;
+        p {
+          color: gray;
         }
+      }
+    }
+  }
+}
+@media (max-width: 560px) {
+  .card__wrap {
+    display: flex;
+    margin-top: 100px;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    .cards__card {
+      padding: 40px 5px;
+      max-width: 100%;
+      display: flex;
+      align-items: center;
+      // border: 1px solid red;
+      gap: 20px;
+      .cards__text {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        b {
+          font-size: 20px;
+          font-weight: 600;
+        }
+        p {
+          color: gray;
+        }
+      }
     }
   }
 }
