--- a/sass/block/_navbar.scss
+++ b/sass/block/_navbar.scss
@@ -18,3 +18,26 @@
         }
     }
 }
+@media (max-width:770px) {
+    .nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
+    b{
+        font-size: 24px;
+        font-weight: 600;
+    }
+    .nav__collection{
+        display: none;
+        align-items: center;
+        gap: 25px;
+        .nav__item{
+            &:hover{
+                color: green;
+            }
+        }
+    }
+}
+    
+}
